fix wrapper's height and add z-index for modal

--- a/src/style.scss
+++ b/src/style.scss
@@ -23,6 +23,11 @@ body {
   color: $dark;
 }
 
+.wrapper {
+  height: 100vh;
+  overflow: hidden;
+}
+
 .container {
   max-width: 1024px;
   padding: 0 40px;
